TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_after.dot
digraph AST {
  "135973590261168" [label="Start"];
  "135973590261168" -> "135973590404112";
  "135973590404112" [label="Code"];
  "135973590404112" -> "135973590403872";
  "135973590403872" [label="Function"];
  "135973590403872" -> "135973590405696";
  "135973590403872" -> "135973590405840";
  "135973590403872" -> "135973590406176";
  "135973590405696" [label="main"];
  "135973590405840" [label="Parameters"];
  "135973590406176" [label="Code"];
  "135973590406176" -> "135973590406272";
  "135973590406176" -> "135973590406320";
  "135973590406272" [label="Code"];
  "135973590406272" -> "135973590406368";
  "135973590406368" [label="Declaration"];
  "135973590406368" -> "135973590406848";
  "135973590406368" -> "135973590406896";
  "135973590406848" [label="x"];
  "135973590406896" [label="1"];
  "135973590406320" [label="Code"];
  "135973590406320" -> "135973590406944";
  "135973590406944" [label="Declaration"];
  "135973590406944" -> "135973590407040";
  "135973590406944" -> "135973590407088";
  "135973590407040" [label="x"];
  "135973590407088" [label="2"];
}
